@@ -76,97 +76,130 @@
 
 		<KEYWORDS>
 			<!-- HTML/XHTML elements, taken from http://de.selfhtml.org/html/referenz/elemente.htm -->
-			<MARKUP>a</MARKUP>
-			<MARKUP>abbr</MARKUP>
-			<MARKUP>acronym</MARKUP>
-			<MARKUP>address</MARKUP>
-			<MARKUP>applet</MARKUP>
-			<MARKUP>area</MARKUP>
-			<MARKUP>b</MARKUP>
-			<MARKUP>base</MARKUP>
-			<MARKUP>basefont</MARKUP>
-			<MARKUP>bdo</MARKUP>
-			<MARKUP>big</MARKUP>
-			<MARKUP>blockquote</MARKUP>
-			<MARKUP>body</MARKUP>
-			<MARKUP>br</MARKUP>
-			<MARKUP>button</MARKUP>
-			<MARKUP>caption</MARKUP>
-			<MARKUP>center</MARKUP>
-			<MARKUP>cite</MARKUP>
-			<MARKUP>code</MARKUP>
-			<MARKUP>col</MARKUP>
-			<MARKUP>colgroup</MARKUP>
-			<MARKUP>dd</MARKUP>
-			<MARKUP>del</MARKUP>
-			<MARKUP>dfn</MARKUP>
-			<MARKUP>dir</MARKUP>
-			<MARKUP>div</MARKUP>
-			<MARKUP>dl</MARKUP>
-			<MARKUP>dt</MARKUP>
-			<MARKUP>em</MARKUP>
-			<MARKUP>fieldset</MARKUP>
-			<MARKUP>font</MARKUP>
-			<MARKUP>form</MARKUP>
-			<MARKUP>frame</MARKUP>
-			<MARKUP>frameset</MARKUP>
-			<MARKUP>h1</MARKUP>
-			<MARKUP>h2</MARKUP>
-			<MARKUP>h3</MARKUP>
-			<MARKUP>h4</MARKUP>
-			<MARKUP>h5</MARKUP>
-			<MARKUP>h6</MARKUP>
-			<MARKUP>head</MARKUP>
-			<MARKUP>hr</MARKUP>
-			<MARKUP>html</MARKUP>
-			<MARKUP>i</MARKUP>
-			<MARKUP>iframe</MARKUP>
-			<MARKUP>img</MARKUP>
-			<MARKUP>input</MARKUP>
-			<MARKUP>ins</MARKUP>
-			<MARKUP>isindex</MARKUP>
-			<MARKUP>kbd</MARKUP>
-			<MARKUP>label</MARKUP>
-			<MARKUP>legend</MARKUP>
-			<MARKUP>li</MARKUP>
-			<MARKUP>link</MARKUP>
-			<MARKUP>map</MARKUP>
-			<MARKUP>menu</MARKUP>
-			<MARKUP>meta</MARKUP>
-			<MARKUP>noframes</MARKUP>
-			<MARKUP>noscript</MARKUP>
-			<MARKUP>object</MARKUP>
-			<MARKUP>ol</MARKUP>
-			<MARKUP>optgroup</MARKUP>
-			<MARKUP>option</MARKUP>
-			<MARKUP>p</MARKUP>
-			<MARKUP>param</MARKUP>
-			<MARKUP>pre</MARKUP>
-			<MARKUP>q</MARKUP>
-			<MARKUP>s</MARKUP>
-			<MARKUP>samp</MARKUP>
-			<MARKUP>script</MARKUP>
-			<MARKUP>select</MARKUP>
-			<MARKUP>small</MARKUP>
-			<MARKUP>span</MARKUP>
-			<MARKUP>strike</MARKUP>
-			<MARKUP>strong</MARKUP>
-			<MARKUP>style</MARKUP>
-			<MARKUP>sub</MARKUP>
-			<MARKUP>sup</MARKUP>
-			<MARKUP>table</MARKUP>
-			<MARKUP>tbody</MARKUP>
-			<MARKUP>td</MARKUP>
-			<MARKUP>textarea</MARKUP>
-			<MARKUP>tfoot</MARKUP>
-			<MARKUP>th</MARKUP>
-			<MARKUP>thead</MARKUP>
-			<MARKUP>title</MARKUP>
-			<MARKUP>tr</MARKUP>
-			<MARKUP>tt</MARKUP>
-			<MARKUP>u</MARKUP>
-			<MARKUP>ul</MARKUP>
-			<MARKUP>var</MARKUP>
+			<!-- updated to include html5 elements. Obsolete and deprecated elements
+			are still here for backward compatibility. -->
+			<KEYWORD1>a</KEYWORD1>
+			<KEYWORD1>abbr</KEYWORD1>
+			<KEYWORD1>acronym</KEYWORD1>
+			<KEYWORD1>address</KEYWORD1>
+			<KEYWORD1>applet</KEYWORD1>
+			<KEYWORD1>area</KEYWORD1>
+			<KEYWORD1>article</KEYWORD1>
+			<KEYWORD1>aside</KEYWORD1>
+			<KEYWORD1>audio</KEYWORD1>
+			<KEYWORD1>b</KEYWORD1>
+			<KEYWORD1>base</KEYWORD1>
+			<KEYWORD1>basefont</KEYWORD1>
+			<KEYWORD1>bdi</KEYWORD1>
+			<KEYWORD1>bdo</KEYWORD1>
+			<KEYWORD1>big</KEYWORD1>
+			<KEYWORD1>blockquote</KEYWORD1>
+			<KEYWORD1>body</KEYWORD1>
+			<KEYWORD1>br</KEYWORD1>
+			<KEYWORD1>button</KEYWORD1>
+			<KEYWORD1>canvas</KEYWORD1>
+			<KEYWORD1>caption</KEYWORD1>
+			<KEYWORD1>center</KEYWORD1>
+			<KEYWORD1>cite</KEYWORD1>
+			<KEYWORD1>code</KEYWORD1>
+			<KEYWORD1>col</KEYWORD1>
+			<KEYWORD1>colgroup</KEYWORD1>
+			<KEYWORD1>command</KEYWORD1>
+			<KEYWORD1>data</KEYWORD1>
+			<KEYWORD1>datalist</KEYWORD1>
+			<KEYWORD1>dd</KEYWORD1>
+			<KEYWORD1>del</KEYWORD1>
+			<KEYWORD1>details</KEYWORD1>
+			<KEYWORD1>dfn</KEYWORD1>
+			<KEYWORD1>dir</KEYWORD1>
+			<KEYWORD1>div</KEYWORD1>
+			<KEYWORD1>dl</KEYWORD1>
+			<KEYWORD1>dt</KEYWORD1>
+			<KEYWORD1>em</KEYWORD1>
+			<KEYWORD1>embed</KEYWORD1>
+			<KEYWORD1>fieldset</KEYWORD1>
+			<KEYWORD1>figcaption</KEYWORD1>
+			<KEYWORD1>figure</KEYWORD1>
+			<KEYWORD1>font</KEYWORD1>
+			<KEYWORD1>footer</KEYWORD1>
+			<KEYWORD1>form</KEYWORD1>
+			<KEYWORD1>frame</KEYWORD1>
+			<KEYWORD1>frameset</KEYWORD1>
+			<KEYWORD1>h1</KEYWORD1>
+			<KEYWORD1>h2</KEYWORD1>
+			<KEYWORD1>h3</KEYWORD1>
+			<KEYWORD1>h4</KEYWORD1>
+			<KEYWORD1>h5</KEYWORD1>
+			<KEYWORD1>h6</KEYWORD1>
+			<KEYWORD1>head</KEYWORD1>
+			<KEYWORD1>header</KEYWORD1>
+			<KEYWORD1>hgroup</KEYWORD1>
+			<KEYWORD1>hr</KEYWORD1>
+			<KEYWORD1>html</KEYWORD1>
+			<KEYWORD1>i</KEYWORD1>
+			<KEYWORD1>iframe</KEYWORD1>
+			<KEYWORD1>img</KEYWORD1>
+			<KEYWORD1>input</KEYWORD1>
+			<KEYWORD1>ins</KEYWORD1>
+			<KEYWORD1>isindex</KEYWORD1>
+			<KEYWORD1>kbd</KEYWORD1>
+			<KEYWORD1>keygen</KEYWORD1>
+			<KEYWORD1>label</KEYWORD1>
+			<KEYWORD1>legend</KEYWORD1>
+			<KEYWORD1>li</KEYWORD1>
+			<KEYWORD1>link</KEYWORD1>
+			<KEYWORD1>map</KEYWORD1>
+			<KEYWORD1>mark</KEYWORD1>
+			<KEYWORD1>menu</KEYWORD1>
+			<KEYWORD1>meta</KEYWORD1>
+			<KEYWORD1>meter</KEYWORD1>
+			<KEYWORD1>nav</KEYWORD1>
+			<KEYWORD1>noframes</KEYWORD1>
+			<KEYWORD1>noscript</KEYWORD1>
+			<KEYWORD1>object</KEYWORD1>
+			<KEYWORD1>ol</KEYWORD1>
+			<KEYWORD1>optgroup</KEYWORD1>
+			<KEYWORD1>option</KEYWORD1>
+			<KEYWORD1>output</KEYWORD1>
+			<KEYWORD1>p</KEYWORD1>
+			<KEYWORD1>param</KEYWORD1>
+			<KEYWORD1>pre</KEYWORD1>
+			<KEYWORD1>progress</KEYWORD1>
+			<KEYWORD1>q</KEYWORD1>
+			<KEYWORD1>rp</KEYWORD1>
+			<KEYWORD1>rt</KEYWORD1>
+			<KEYWORD1>ruby</KEYWORD1>
+			<KEYWORD1>s</KEYWORD1>
+			<KEYWORD1>samp</KEYWORD1>
+			<KEYWORD1>script</KEYWORD1>
+			<KEYWORD1>section</KEYWORD1>
+			<KEYWORD1>select</KEYWORD1>
+			<KEYWORD1>small</KEYWORD1>
+			<KEYWORD1>source</KEYWORD1>
+			<KEYWORD1>span</KEYWORD1>
+			<KEYWORD1>strike</KEYWORD1>
+			<KEYWORD1>strong</KEYWORD1>
+			<KEYWORD1>style</KEYWORD1>
+			<KEYWORD1>sub</KEYWORD1>
+			<KEYWORD1>summary</KEYWORD1>
+			<KEYWORD1>sup</KEYWORD1>
+			<KEYWORD1>table</KEYWORD1>
+			<KEYWORD1>tbody</KEYWORD1>
+			<KEYWORD1>td</KEYWORD1>
+			<KEYWORD1>textarea</KEYWORD1>
+			<KEYWORD1>tfoot</KEYWORD1>
+			<KEYWORD1>th</KEYWORD1>
+			<KEYWORD1>thead</KEYWORD1>
+			<KEYWORD1>time</KEYWORD1>
+			<KEYWORD1>title</KEYWORD1>
+			<KEYWORD1>tr</KEYWORD1>
+			<KEYWORD1>track</KEYWORD1>
+			<KEYWORD1>tt</KEYWORD1>
+			<KEYWORD1>u</KEYWORD1>
+			<KEYWORD1>ul</KEYWORD1>
+			<KEYWORD1>var</KEYWORD1>
+			<KEYWORD1>video</KEYWORD1>
+			<KEYWORD1>wbr</KEYWORD1>
 		</KEYWORDS>
 	</RULES>
 
